# shadowsocks-rust

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/crypto/: aead.rs  cipher.rs  openssl.rs  sodium.rs  stream.rs
src/tcp/: mod.rs  server.rs  session.rs
src/temp/: config.rs  context.rs  dns_resolver.rs  mod.rs  socket5.rs  traits.rs
src/udp/: crypto_io.rs  mod.rs  server.rs  session.rs  session_client.rs  types.rs
src/util/: helper.rs  mod.rs  types.rs
