[package]
name = "shadowsocks_mock"
version = "0.1.0"
authors = ["fakeshadow <24548779@qq.com>"]
edition = "2018"

[dependencies]
futures-preview = { version = "0.3.0-alpha.18", features = ["nightly", "compat", "async-await"] }

futures01 = { package = "futures", version = "0.1.28" }

clap = "2.33"

serde = "1.0.99"
serde_derive = "1.0.99"
serde_urlencoded = "0.5"

tokio = "0.2.0-alpha.4"

url = "2.0"

log = "0.4"
byteorder = "1.3"
rand = "0.7"
time = "0.1"
hashbrown = "0.6.0"
env_logger = "0.6"
openssl = { version = "0.10", optional = true }
libc = "0.2"
json5 = "0.2"
base64 = "0.10"
bytes = "0.4"
ring = "0.14"
md-5 = "0.8"
digest = "0.8"
typenum = "1.10"
byte_string = "1.0"
libsodium-ffi = { version = "0.1", optional = true }
miscreant = { version = "0.4", optional = true }
lru-cache = "0.1"
dns-parser = "0.8"
trust-dns-resolver = { version = "0.11", features = ["dns-over-rustls", "dns-over-https-rustls"] }
spin = { version = "0.5", default-features = false }

async-std = "0.99"